script for making a likelihood scan of the CLEO constraint

--- a/charmFitter/scripts/CMakeLists.txt
+++ b/charmFitter/scripts/CMakeLists.txt
@@ -7,14 +7,14 @@ add_executable(pull-study pull_study.cpp)
 target_link_libraries(pull-study common charmFitter ${Boost_LIBRARIES} ${ROOT_LIBRARIES})
 
 # Test that our parameter scan works ok for a fit to a simple polynomial
-add_executable(test_param_scan.exe
-  test_param_scan.cpp)
+add_executable(test_param_scan.exe test_param_scan.cpp)
 target_link_libraries(test_param_scan.exe common charmFitter ${ROOT_LIBRARIES} ${Boost_LIBRARIES})
 
 # Example decay binning
 add_executable(bin_decays.exe bin_generated_decays.cpp ReadAmpGen.cpp)
-target_link_libraries(bin_decays.exe charmFitter common ${ROOT_LIBRARIES} ${Boost_LIBRARIES} ${CMAKE_DL_LIBS})
+target_link_libraries(bin_decays.exe common charmFitter ${ROOT_LIBRARIES} ${Boost_LIBRARIES} ${CMAKE_DL_LIBS})
 
-# Create some plots using the decay simulator
-add_executable(decay_simulator_plots.exe decay_simulator_plots.cpp)
-target_link_libraries(decay_simulator_plots.exe charmFitter common ${ROOT_LIBRARIES})
+# Check the landscape of the CLEO likelihood
+add_executable(cleo_likelihood.exe cleo_likelihood.cpp)
+target_include_directories(cleo_likelihood.exe PUBLIC "${CMAKE_SOURCE_DIR}/charmFitter/CLEO/")
+target_link_libraries(cleo_likelihood.exe common charmFitter ${ROOT_LIBRARIES} ${Boost_LIBRARIES})
