--- a/efficiency/model/requirements.txt
+++ b/efficiency/model/requirements.txt
@@ -1,10 +1,15 @@
 absl-py==0.12.0
+appdirs==1.4.4
 astunparse==1.6.3
 attrs==20.3.0
+awkward==0.14.0
+black==20.8b1
 cachetools==4.2.1
 certifi==2020.12.5
 chardet==4.0.0
+click==7.1.2
 cloudpickle==1.6.0
+coverage==5.5
 decorator==4.4.2
 dm-tree==0.1.5
 flaky==3.7.0
@@ -15,14 +20,19 @@ google-auth-oauthlib==0.4.3
 google-pasta==0.2.0
 grpcio==1.32.0
 h5py==2.10.0
+hep-ml==0.6.2
 idna==2.10
 iniconfig==1.1.1
+joblib==1.0.1
 Keras-Preprocessing==1.1.2
 Markdown==3.3.4
-numpy==1.19.5
+mypy-extensions==0.4.3
+numpy==1.18.5
 oauthlib==3.1.0
 opt-einsum==3.3.0
 packaging==20.9
+pandas==1.2.3
+pathspec==0.8.1
 phasespace==1.2.0
 pluggy==0.13.1
 protobuf==3.15.6
@@ -31,18 +41,29 @@ pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pyparsing==2.4.7
 pytest==6.2.2
+pytest-cov==2.11.1
+python-dateutil==2.8.1
+pytz==2021.1
+regex==2021.3.17
 requests==2.25.1
 requests-oauthlib==1.3.0
 rsa==4.7.2
+scikit-learn==0.24.1
+scipy==1.6.2
 six==1.15.0
 tensorboard==2.4.1
 tensorboard-plugin-wit==1.8.0
-tensorflow==2.4.1
-tensorflow-estimator==2.4.0
-tensorflow-probability==0.12.1
+tensorflow==2.3.1
+tensorflow-estimator==2.3.0
+tensorflow-probability==0.11.1
 termcolor==1.1.0
+Theano==1.0.5
+threadpoolctl==2.1.0
 toml==0.10.2
+typed-ast==1.4.2
 typing-extensions==3.7.4.3
+uproot==3.11.7
+uproot-methods==0.9.2
 urllib3==1.26.4
 Werkzeug==1.0.1
 wrapt==1.12.1
