--- a/efficiency/model/requirements.txt
+++ b/efficiency/model/requirements.txt
@@ -10,6 +10,7 @@ chardet==4.0.0
 click==7.1.2
 cloudpickle==1.6.0
 coverage==5.5
+cycler==0.10.0
 decorator==4.4.2
 dm-tree==0.1.5
 flaky==3.7.0
@@ -25,7 +26,9 @@ idna==2.10
 iniconfig==1.1.1
 joblib==1.0.1
 Keras-Preprocessing==1.1.2
+kiwisolver==1.3.1
 Markdown==3.3.4
+matplotlib==3.4.0
 mypy-extensions==0.4.3
 numpy==1.18.5
 oauthlib==3.1.0
@@ -34,6 +37,7 @@ packaging==20.9
 pandas==1.2.3
 pathspec==0.8.1
 phasespace==1.2.0
+Pillow==8.1.2
 pluggy==0.13.1
 protobuf==3.15.6
 py==1.10.0
