script for BES3 likelihood

--- a/charmFitter/scripts/CMakeLists.txt
+++ b/charmFitter/scripts/CMakeLists.txt
@@ -18,6 +18,10 @@ target_link_libraries(bin_decays.exe common charmFitter ${ROOT_LIBRARIES} ${Boos
 add_executable(cleo_likelihood.exe cleo_likelihood.cpp)
 target_link_libraries(cleo_likelihood.exe common charmFitter ${ROOT_LIBRARIES} ${Boost_LIBRARIES})
 
+# Check the landscape of the BES chi2
+add_executable(bes_chi2.exe bes_chi2.cpp)
+target_link_libraries(bes_chi2.exe charmFitter common ${ROOT_LIBRARIES} ${Boost_LIBRARIES})
+
 # Combine CLEO likelihood with toy data
 add_executable(cleo_combination.exe cleo_combination.cpp)
 target_link_libraries(cleo_combination.exe charmFitter common ${ROOT_LIBRARIES} ${Boost_LIBRARIES})
