fitter + script testing combination of BES3 chi2 and charm fit

--- a/charmFitter/CMakeLists.txt
+++ b/charmFitter/CMakeLists.txt
@@ -4,6 +4,7 @@ set(fitter
   src/fitter/ConstrainedFitter.cpp
   src/fitter/UnconstrainedFitter.cpp
   src/fitter/CleoCombinationFitter.cpp
+  src/fitter/BesCombinationFitter.cpp
 )
 
 add_library(charmFitter STATIC
